--- a/CSS/styless.css
+++ b/CSS/styless.css
@@ -153,7 +153,7 @@ img {
     min-height: 603;
     margin-left: auto;
     margin-right: auto;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/desctop-hero.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
