--- a/CSS/styless.css
+++ b/CSS/styless.css
@@ -38,44 +38,158 @@ img {
 } 
 
 .conteiner {
-    width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0 auto;
+    padding-left: 16px;
+    padding-right: 16px;
 }
+@media screen and (min-width: 428px) {
+    .conteiner {
+        width: 428px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+@media screen and (min-width: 768px) {
+    .conteiner {
+        width: 768px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .conteiner {
+        width: 1160px;
+    }
+}
+
 
 /* Marking Logo */
 .logo {
-    margin-right: 77px;
-    padding-top: 24px;
-    padding-bottom: 24px;
-
     color: var(--dark-color);
     text-transform: uppercase;
     text-decoration: none;
     font-family: Raleway, sans-serif;
     font-weight: 800;
     font-size: 18px;
-    line-height: 1.33;
+    line-height: 1.17;
     letter-spacing: 0.03em;
 }
 
 .logo-web {
     color: var(--primary-brend-color);
 }
-
-/* Marking Navigation */
-.header {
-    box-shadow:
-    0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 1px 6px rgba(46, 47, 66, 0.08);
+@media screen and (min-width: 1200px) {
+    .logo {
+        line-height: 1.33;
+    }
+}
+@media screen and (max-width: 767px) {
+    .site-nav {
+            display: none;
+    }
+    .contacts {
+        display: none;
+    }
 }
 .main-nav {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.site-nav {
+.header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    box-shadow:
+        0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+.mobile-menu-open {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+}
+.mobile-menu {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    padding: 40px;
+    background-color: var(--withe-color);
+    box-shadow:
+        0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: 
+        opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu-list {
+    margin-top: auto;
+}
+.mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+.mobile-menu-close {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    transition:
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-close:hover,
+.mobile-menu-close:focus {
+    background-color: #404BBF;
+    fill: var(--withe-color);
+}
+.mobile-menu-site-nav {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+}
+.mobile-menu-item {
+    margin-top: 40px;
+}
+.mobile-menu-item .link {
+    text-decoration: none;
+    color: var(--dark-color);
+}
+.mobile-menu-site-nav .link:hover,
+.mobile-menu-site-nav .link:focus {
+    color: var(--primary-brend-color);
+}
+.mobile-menu-social-list {
+    display: flex;
+}
+
+/* .logo {
+    margin-right: 77px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+ */
+
+/* Marking Navigation */
+
+/* .site-nav {
     display: flex;
     font-weight: 500;
 }
@@ -119,10 +233,10 @@ img {
 }
 .site-nav .portfolio .link {
     color: var(--primary-brend-color);
-}
+} */
 
 /* Marking Contakts */
-.contacts {
+/* .contacts {
     display: flex;
     margin-left: auto;
 }
@@ -142,10 +256,10 @@ img {
 }
 .contact:hover, .contact:focus {
     color: var(--primary-brend-color);
-}
+} */
 
 /* Marking Hero */
-.hero {
+/* .hero {
     padding-top: 192px;
     padding-bottom: 192px;
 
@@ -171,10 +285,10 @@ img {
     font-weight: 500;
     font-size: 56px;
     line-height: 1.07;
-}
+} */
 
 /* Marking Button */
-.button.primary {
+/* .button.primary {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border: none;
     border-radius: 4px;
@@ -203,10 +317,10 @@ img {
     0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+} */
 
 /* Marking Features */
-.section-feature {
+/* .section-feature {
     padding-top: 120px;
     padding-bottom: 120px;
 }
@@ -250,10 +364,10 @@ img {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
-}
+} */
 
 /* Marking Wot We Do */
-.section-doing {
+/* .section-doing {
     padding-bottom: 120px;
 }
 .section-page {
@@ -273,10 +387,11 @@ img {
 
 .work .item:not(:last-child) {
     margin-right: 24px;
-}
+} */
 
 /* Markinf Our Team */
-.team {
+
+/* .team {
     display: flex;
 }
 
@@ -339,10 +454,11 @@ img {
 }
 .social-icon {
     fill: var(--light-color);
-}
+} */
 
 /* Marking Customers */
-.customers {
+
+/* .customers {
     padding-top: 120px;
     padding-bottom: 120px;
 }
@@ -382,10 +498,11 @@ img {
     color: var(--primary-brend-color);
     border: 1px solid var(--primary-brend-color);
     border-radius: 4px;
-}
+} */
 
 /* Marking Footer */
-.footer-box {
+
+/* .footer-box {
     display: flex;
 }
 .footer {
@@ -474,10 +591,9 @@ img {
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
-}
-.subscribe-btn-footer {
-    /* width: 165px;
-    height: 40px; */
+} */
+
+/* .subscribe-btn-footer {
     padding: 8px 24px;
     background: #4D5AE5;
     border-radius: 4px;
@@ -509,10 +625,10 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--withe-color);
-}
+} */
 /* MARKING PORTFOLIO */
 
-.section-main {
+/* .section-main {
     padding-top: 96px;
     padding-bottom: 120px;
 }
@@ -558,10 +674,10 @@ img {
     0px 3px 1px rgba(0, 0, 0, 0.1),
     0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+} */
 
 /* Marking  Cards*/
-.cards {
+/* .cards {
     display: flex;
     flex-wrap: wrap;
     margin-right: -24px;
@@ -636,10 +752,10 @@ img {
     0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+} */
 
 /* Marking Backdrop */
-.backdrop {
+/* .backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -871,4 +987,4 @@ img {
         0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+} */
