--- a/CSS/styless.css
+++ b/CSS/styless.css
@@ -368,9 +368,42 @@ img {
     background-color: var(--dark-color);
     text-align: center;
 }
+@media screen and (min-device-pixel-ratio: 2),
+screen and (min-resolution: 192dpi),
+screen and (min-resolution: 2dppx) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile-hero@2x.jpg);
+    }
+}
+@media screen and (min-width: 768px) {
+    .hero {
+            background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet-hero.jpg);
+        }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+screen and (min-resolution: 192dpi) and (min-width: 768px),
+screen and (min-resolution: 2dppx) and (min-width: 768px) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet-hero@2x.jpg);
+    }
+}
+@media screen and (min-width: 1200px) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/desctop-hero.jpg);
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+screen and (min-resolution: 192dpi) and (min-width: 1200px),
+screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/desctop-hero@2x.jpg);
+    }
+}
+
 .hero-title {
     margin-bottom: 72px;
-    width: 318px;
+    max-width: 318px;
     margin-left: auto;
     margin-right: auto;
 
@@ -412,66 +445,42 @@ img {
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-/* .hero {
-    padding-top: 192px;
-    padding-bottom: 192px;
+@media screen and (min-width: 768px) {
+    .hero {
+        padding-bottom: 108px;
+        max-width: 768px;
+        min-height: 436px;
+    }
+    .hero-title {
+        margin-bottom: 40px;
+        min-width: 494px;
+        margin-left: auto;
+        margin-right: auto;
 
-    max-width: 1440;
-    min-height: 603;
-    margin-left: auto;
-    margin-right: auto;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/desctop-hero.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-
-    background-color: var(--dark-color);
-    text-align: center;
+        color: var(--withe-color);
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 1.07;
+    }
 }
-.hero-title {
-    margin-bottom: 48px;
-    width: 492px;
-    margin-left: auto;
-    margin-right: auto;
 
-    color: var(--withe-color);
-    font-weight: 500;
-    font-size: 56px;
-    line-height: 1.07;
-} */
-
-/* Marking Button */
-/* .button.primary {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border: none;
-    border-radius: 4px;
-    width: 170px;
-    height: 51px;
-    padding: 16px 32px;
-
-    transition:
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    cursor: pointer;
-    color: var(--withe-color);
-    background-color: var(--primary-brend-color);
-    font-family: Roboto, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
-    letter-spacing: 0.04em;
+@media screen and (min-width: 1200px) {
+    .hero {
+        padding-top: 188px;
+        padding-bottom: 188px;
+        max-width: 1440px;
+        min-height: 600px;
+    }
+    .hero-title {
+        margin-bottom: 48px;
+        min-width: 492px;
+    }
 }
-.button.primary:hover,
-.button.primary:focus {
-    background-color: #404BBF;
-    box-shadow: 
-    0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
-} */
 
+/* Marking Features */
+.feature-box-icon {
+    display: none;
+}
 /* Marking Features */
 /* .section-feature {
     padding-top: 120px;
@@ -505,7 +514,7 @@ img {
 .feature-icon {
     fill: var(--light-color);
 }
-
+ */
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -517,7 +526,7 @@ img {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
-} */
+}
 
 /* Marking Wot We Do */
 /* .section-doing {
@@ -1128,7 +1137,7 @@ img {
     text-align: center;
     letter-spacing: 0.04em;
     
-        color: #FFFFFF;
+    color: #FFFFFF;
     transition:
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
