--- a/CSS/styless.css
+++ b/CSS/styless.css
@@ -582,27 +582,27 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
 
 /* Markinf Our Team */
 .item-foto {
+    max-width: 264px;
     box-shadow:
         0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
     background-color: var(--withe-color);
-    /* text-align: center;
-    align-items: center; */
 }
 
 .our-team {
     padding-top: 96px;
     padding-bottom: 128px;
-    
-    /* margin-left: auto;
-    margin-right: auto; */
 
     background-color: var(--light-color);
-    /* text-align: center; */
 }
-
+.team {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px;
+    justify-content: center;
+}
 .team-content {
     padding: 32px 16px;
 }
@@ -648,72 +648,79 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
 .social-icon {
     fill: var(--light-color);
 }
-/* Markinf Our Team */
+@media screen and (min-width: 768px) {
+    .our-team {
+        padding-bottom: 104px;
+    }
+    .team {
+        row-gap: 64px;
+        column-gap: 24px;
+    }
+    .item-foto {
+        flex-basis: calc((100% - 24px) / 2);
+    }
+}
+@media screen and (min-width: 1200px) {
+    .our-team {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+    .team {
+        gap: 24px;
+    }
 
-/* .team {
-    display: flex;
+    .item-foto {
+        flex-basis: calc((100% - 72px) / 4);
+    }
 }
 
-.team .item-foto:not(:last-child) {
-    margin-right: 24px;
+/* Marking Customers */
+.customers {
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
-
-.item-foto {
-    box-shadow:
-    0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 0px 0px 4px 4px;
-    background-color: var(--withe-color);
-}
-
-.our-team{
-    padding-top: 120px;
-    padding-bottom: 120px;
-    
-    background-color: var(--light-color);
-}
-
-.team-content {
-    padding: 32px 16px;
-}
-
-.team-page {
+.customers-peage {
+    margin-bottom: 72px;
     color: var(--dark-color);
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
     text-align: center;
 }
-.team-text {
-    text-align: center;
-    margin-bottom: 8px;
-    margin-top: 8px;
-}
-.social-list {
+.customers-list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 24px;
-    padding: 4px 0px;
+    row-gap: 72px;
+    column-gap: 16px;
 }
-.social-link {
+.customer-item {
+    flex-basis: calc((100% - 16px) / 2);
+}
+.customer-link {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: var(--primary-brend-color);
+    color: #8E8F99;
+    border: 1px solid #8E8F99;
+    border-radius: 4px;
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-link:hover,
-.social-link:focus {
-    background-color: #404BBF;
+.customer-logo {
+    fill: currentColor;
+
+    padding: 16px 32px;
+    width: 168px;
+    height: 88px;
 }
-.social-icon {
-    fill: var(--light-color);
-} */
+
+.customer-link:hover,
+.customer-link:focus {
+    color: var(--primary-brend-color);
+    border: 1px solid var(--primary-brend-color);
+    border-radius: 4px;
+}
 
 /* Marking Customers */
 
