--- a/CSS/styless.css
+++ b/CSS/styless.css
@@ -695,7 +695,9 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     column-gap: 16px;
 }
 .customer-item {
-    flex-basis: calc((100% - 16px) / 2);
+    /* width: 100%;
+    max-width: 190px; */
+    flex-basis: calc((100% - 1 * 16px) / 2);
 }
 .customer-link {
     display: flex;
@@ -721,70 +723,56 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     border: 1px solid var(--primary-brend-color);
     border-radius: 4px;
 }
-
-/* Marking Customers */
-
-/* .customers {
-    padding-top: 120px;
-    padding-bottom: 120px;
+@media screen and (min-width: 768px) {
+    .customers-list {
+        column-gap: 24px;
+    }
+    .customer-item {
+        max-width: 168px;
+        flex-basis: calc((100% - 2 * 24px) / 3);
+    }
 }
-.customers-peage {
-    margin-bottom: 72px;
-    color: var(--dark-color);
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
+@media screen and (min-width: 1200px) {
+    .customers {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
 }
-.customers-list {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-}
-.customer-link {
-    display: flex;
-    color: #8E8F99;
-    border: 1px solid #8E8F99;
-    border-radius: 4px;
-
-    transition:
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.customer-logo {
-    fill: currentColor;
-    
-    padding: 16px 32px;
-    width: 168px;
-    height: 88px;
-}
-.customer-link:hover,
-.customer-link:focus {
-    color: var(--primary-brend-color);
-    border: 1px solid var(--primary-brend-color);
-    border-radius: 4px;
-} */
 
 /* Marking Footer */
-
-/* .footer-box {
-    display: flex;
-}
 .footer {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 
     color: var(--accent-color);
     background-color: var(--dark-color);
 }
-.footer .logo {
+.footer-box {
+    display: flex;
+    flex-wrap: wrap;
+}
+.logo-footer-box {
+    display: flex;
+    flex-direction: column;
+}
+.logo-footer {
+    color: var(--dark-color);
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: Raleway, sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+}
+.footer .logo-footer {
     color: var(--accent-color);
 }
-
 .footer-text {
-    width: 264px;
+    /* width: 100%; */
+    width: 268px;
     margin-top: 16px;
+    margin-bottom: 72px;
 }
 .social-media-footer {
     margin-bottom: 16px;
@@ -794,15 +782,11 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     letter-spacing: 0.02em;
     color: var(--withe-color);
 }
-.logo-footer-box {
-    margin-right: 120px;
-}
 .social-list-footer {
     display: flex;
     justify-content: center;
     gap: 16px;
 }
-
 .social-link-footer {
     display: flex;
     justify-content: center;
@@ -813,7 +797,6 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     background-color: rgba(255, 255, 255, 0.1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .social-link-footer:hover,
 .social-link-footer:focus {
     background-color: #31D0AA;
@@ -822,11 +805,8 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
 .social-icon-footer {
     fill: var(--light-color);
 }
-.subscribe-footer-box {
-    margin-left: 80px;
-}
-
 .subscribe-peage-footer {
+    margin-top: 72px;
     margin-bottom: 16px;
     font-weight: 500;
     font-size: 16px;
@@ -836,39 +816,47 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
 }
 .subscribe-form-footer {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
 }
+
 .frame-icon-footer {
     fill: var(--withe-color);
 }
+
 .subscribe-input-footer {
-    width: 264px;
+    width: 100%;
+    max-width: 396px;
     height: 40px;
     color: var(--withe-color);
     background-color: var(--dark-color);
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    margin-right: 24px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 16px;
     padding: 0 0 0 16px;
 }
+
 .subscribe-input-footer::placeholder {
     font-weight: 400;
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
-} */
-
-/* .subscribe-btn-footer {
+}
+.subscribe-btn-footer {
     padding: 8px 24px;
+    margin-left: auto;
+    margin-right: auto;
     background: #4D5AE5;
     border-radius: 4px;
     border: 0;
     cursor: pointer;
-    transition: 
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .subscribe-btn-footer:hover,
 .subscribe-btn-footer:focus {
     background-color: #404BBF;
@@ -877,11 +865,13 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
 .subscribe-btn-fill {
     display: flex;
     margin-top: auto;
     margin-bottom: auto;
 }
+
 .subscribe-btn-text {
     margin-top: auto;
     margin-bottom: auto;
@@ -891,7 +881,57 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--withe-color);
-} */
+}
+@media screen and (max-width: 767px) {
+    .footer-box {
+        justify-content: center;
+    }
+    .logo-footer-box {
+        justify-content: center;
+        align-items: center;
+    }
+    .social-media-footer {
+        text-align: center;
+    }
+    .subscribe-peage-footer {
+        text-align: center;
+    }
+}
+@media screen and (min-width: 768px) {
+    .subscribe-input-footer {
+        width: 264px;
+        margin-bottom: 0;
+        margin-right: 24px;
+    }
+    .footer-text {
+        width: 264px;
+        margin-bottom: 0;
+    }
+    .logo-footer-box {
+        margin-right: 24px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .footer-box {
+        padding-left: 108px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .footer {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+    .logo-footer-box {
+        margin-right: 120px;
+    }
+    .subscribe-footer-box {
+        margin-left: 80px;
+    }
+    .subscribe-peage-footer {
+        margin-top: 0;
+    }
+}
+
 /* MARKING PORTFOLIO */
 
 /* .section-main {
