--- a/CSS/styless.css
+++ b/CSS/styless.css
@@ -509,7 +509,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
         column-gap: 24px;
     }
     .feature-item {
-        flex-basis: calc((100% - 24px) / 2);
+        flex-basis: calc((100% - 1 * 24px) / 2);
     }
 }
 @media screen and (min-width: 1200px) {
@@ -521,7 +521,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
         gap: 0 24px;
     }
     .feature-item {
-        flex-basis: calc((100% - 72px) / 4);
+        flex-basis: calc((100% - 3 * 24px) / 4);
     }
     .future-page {
         font-weight: 500;
@@ -931,34 +931,33 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
         margin-top: 0;
     }
 }
-
 /* MARKING PORTFOLIO */
-
-/* .section-main {
-    padding-top: 96px;
-    padding-bottom: 120px;
+.section-main {
+    padding-top: 48px;
+    padding-bottom: 48px;
 }
-
 .buttons {
     display: flex;
-    justify-content: center;
-    margin-bottom: 72px;
+    flex-wrap: wrap;
+    row-gap: 16px;
+    column-gap: 24px;
+    margin-bottom: 48px;
 }
-
-.buttons .item:not(:last-child) {
-    margin-right: 24px;
-}
-
+/* @media screen and (max-width: 767px) {
+    .item {
+        flex-basis: calc((100% - 2 * 24px) / 3);
+    }
+} */
 .button.secondary {
     border: 1px solid var(--accent-color);
     border-radius: 4px;
     padding: 8px 16px;
 
     transition:
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     cursor: pointer;
     color: var(--primary-brend-color);
@@ -976,12 +975,120 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     background-color: var(--primary-brend-color);
     color: var(--withe-color);
     border: 1px solid transparent;
-    box-shadow: 
-    0px 3px 1px rgba(0, 0, 0, 0.1),
-    0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-} */
+    box-shadow:
+        0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 2px 1px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 
+/* Marking  Cards*/
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -24px;
+    margin-bottom: -48px;
+}
+
+.cards .link {
+    text-decoration: none;
+    color: inherit;
+}
+
+.cards .item {
+    margin-bottom: 48px;
+    border: 0.5px solid var(--light-color);
+}
+
+.card-thumb {
+    position: relative;
+    overflow: hidden;
+}
+
+.text-thumb {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    transform: translateY(100%);
+    opacity: 0;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    color: var(--light-color);
+    padding: 40px 32px;
+    background-color: #4D5AE5;
+    background-blend-mode: soft-light;
+    mix-blend-mode: normal;
+}
+
+.link-card:hover .text-thumb,
+.link-card:focus .text-thumb {
+    transform: translateY(0%);
+    opacity: 1;
+}
+
+.card-page {
+    margin-bottom: 8px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    color: var(--dark-color);
+}
+
+.card-content {
+    padding: 32px 16px;
+    background: var(--withe-color);
+
+}
+
+.cards .item {
+    border: 0.5px solid var(--light-color);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-card {
+    display: block;
+}
+
+.link-card:hover,
+.link-card:focus {
+    box-shadow:
+        0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+@media screen and (min-width: 768px) {
+    .cards .item {
+        margin-right: 24px;
+        flex-basis: calc(100% / 2 - 24px);
+    }
+    .section-main {
+        padding-top: 64px;
+        padding-bottom: 64px;
+    }
+
+    .buttons {
+        justify-content: center;
+        margin-bottom: 64px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .cards .item {
+        flex-basis: calc(100% / 3 - 24px);
+    }
+    .section-main {
+        padding-top: 96px;
+        padding-bottom: 120px;
+    }
+
+    .buttons {
+        margin-bottom: 72px;
+    }
+}
 /* Marking  Cards*/
 /* .cards {
     display: flex;
