--- a/CSS/styless.css
+++ b/CSS/styless.css
@@ -222,7 +222,6 @@ img {
 
     .mobile-menu-social-list {
         display: flex;
-        justify-content: center;
         gap: 56px;
     }
 
@@ -356,8 +355,8 @@ img {
     padding-top: 112px;
     padding-bottom: 112px;
 
-    max-width: 428;
-    min-height: 432;
+    /* max-width: 428px; */
+    min-height: 432px;
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile-hero.jpg);
@@ -496,7 +495,11 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
-    text-align: center;
+}
+@media screen and (max-width: 767px) {
+    .future-page {
+        text-align: center;
+    }
 }
 @media screen and (max-width: 1199px) {
     .feature-box-icon {
@@ -569,7 +572,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     margin-bottom: 72px;
 
     color: var(--dark-color);
-    font-weight: 500;
+    font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
